[gd_scene load_steps=5 format=3 uid="uid://dygafwdufwwts"]

[ext_resource type="FontFile" uid="uid://kb47qdt1kowx" path="res://Assets/Fonts/HomeVideoBold-R90Dv.ttf" id="1_emv3i"]
[ext_resource type="Script" uid="uid://d077yqo7q5gpr" path="res://Scripts/pause_menu.gd" id="1_k0w1u"]
[ext_resource type="Shader" uid="uid://dvmrpndlves4k" path="res://Assets/Shaders/pause_menu.gdshader" id="2_1och7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bpi0q"]
shader = ExtResource("2_1och7")
shader_parameter/amount = 5.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bpi0q")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -61.5
offset_right = 94.0
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 50
text = "Resume Game
"

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="Quit Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 50
text = "Quit Game"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
